--- a/src/Components/PageComponents/MonthlyExpGraph/PercentOfIncome.module.css
+++ b/src/Components/PageComponents/MonthlyExpGraph/PercentOfIncome.module.css
@@ -49,3 +49,17 @@
 .strong {
   font-size: 16px;
 }
+
+@media (max-width: 440px) {
+  .barLabel {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 350px) {
+  .barLabel {
+    position: relative;
+    width: 4px;
+    font-size: 0px;
+  }
+}
